# robodm

./: README.md  pyproject.toml
examples/benchmarks/: openx.py
examples/converters/: fixing_failed_conversions.py  openx_to_vla.py  rlds_to_lerobot.py  vla_to_h5.py
examples/hello_world/: data_collection_and_load.py
examples/loaders/: h5_loader.py  vla_loader.py
examples/tools/: summarize_dataset.py  vla_file_debugger.py
robodm/: __init__.py  __main__.py  cli.py  dataset.py  episode.py  trajectory.py  utils.py
robodm/database/: __init__.py  db_connector.py  db_manager.py  polars_connector.py
robodm/deprecated/: dataset.py
robodm/loader/: hdf5.py  lerobot.py  vla.py
tests/: test_base.py
