[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "robodm"
version = "0.3.0"
dependencies = [
    "numpy",
    "pillow",
    "smart_open",
    "av",
    "requests",
    "h5py",
]
description = "An Efficient and Scalable Data Collection and Management Framework For Robotics Learning"
readme = {file = "README.md", content-type = "text/markdown"}
license = {file = "LICENSE"}
keywords = ["robotics", "data", "management", "collection", "framework", "learning"]

[project.optional-dependencies]
hf = ["datasets"]
rtx = ["tensorflow", "tensorflow_datasets", "envlogger"]
torch = ["torch"]
all = ["datasets", "tensorflow", "tensorflow_datasets", "smart_open", "torch", "torchvision"]

[project.urls]
homepage = "https://github.com/KeplerC/robodm"